--- a/individual-work/wba-projekt-2/styles/_about.scss
+++ b/individual-work/wba-projekt-2/styles/_about.scss
@@ -1,244 +1,233 @@
-#about {
-    margin-inline: 1em;
-    .about-section {
-        margin-top: 3em;
-        .about-heading-container {
-            display: inline-flex;
-            text-align: start;
-            position: relative;
-            margin-bottom: 5em;
-            /* .typeText::after {
-                    content: "|";
-                    animation: blink 1s infinite;
-                }
-                @keyframes blink {
-                    0%,
-                    100% {
-                        opacity: 1;
-                    }
-                    50% {
-                        opacity: 0;
-                    }
-                } */
-            #heading {
-                position: relative;
-                text-transform: uppercase;
-                text-shadow: -15px 5px 20px #b7b7b8;
-                color: white;
-                font-size: 5rem;
-                letter-spacing: -0.05em;
-                font-family: customFontThree;
-                user-select: none;
-                transition: all 0.25s ease-out;
-                word-spacing: 5px;
-            }
-            #heading:hover {
-                text-shadow: -16px 6px 15px #ced0d3;
-            }
-        }
-        .text-container {
-            display: flex;
-            flex-direction: column;
+/* desktop */
+
+@media only screen and (max-width: $width-desktop-bp) and (min-heigh: $height-desktop-bp) {
+    #about {
+        margin-inline: 8em;
+        .about-section {
             margin-top: 3em;
-            h2 {
-                text-align: center;
-                width: 100%;
-                font-family: customFontFour;
-                font-weight: bold;
+            .about-heading-container {
+                display: inline-flex;
+                text-align: start;
+                position: relative;
+                margin-bottom: 5em;
+                /* .typeText::after {
+                        content: "|";
+                        animation: blink 1s infinite;
+                    }
+                    @keyframes blink {
+                        0%,
+                        100% {
+                            opacity: 1;
+                        }
+                        50% {
+                            opacity: 0;
+                        }
+                    } */
+                #heading {
+                    position: relative;
+                    text-transform: uppercase;
+                    text-shadow: -15px 5px 20px #b7b7b8;
+                    color: white;
+                    font-size: clamp(2rem, 3rem, 5rem);
+                    letter-spacing: -0.05em;
+                    font-family: customFontThree;
+                    user-select: none;
+                    transition: all 0.25s ease-out;
+                    word-spacing: 5px;
+                }
+                /* #heading:hover {
+                    text-shadow: -16px 6px 15px #ced0d3;
+                } */
             }
-            p {
-                padding-top: 2em;
-            }
-            ul {
-                margin-top: .7em;
-                list-style-type: none;
-            }
-            ul>li {
-                text-indent: 5px;
-            }
-            ul>li:before {
-                content: "-";
-                text-indent: 5px;
-            }
-            [class^="box-"] {
-                margin-top: 4em;
-            }
-            h2 {
-                color: #202020;
-                text-transform: uppercase;
-                word-spacing: 5px;
-                font-family: customFontTwo;
-            }
-            .box-1 {
-                margin: 2em;
-                margin-bottom: 6em;
-                padding: 3em;
-                width: 55vw;
-                min-height: 40vh;
-                align-self: flex-end;
-                margin-left: 5em;
-                box-shadow: -20px 10px 20px 2px #8988882b;
-                border-radius: 5px;
-            }
-            .box-2 {
-                margin: 2em;
-                margin-top: 5em;
-                margin-bottom: 6em;
-                padding: 3em;
-                width: 55vw;
-                min-height: 40vh;
-                align-self: flex-start;
-                margin-right: 5em;
-                box-shadow: 0px 20px 20px 2px #76757528;
-                border-radius: 5px;
-            }
-            .box-3 {
-                margin: 2em;
-                padding: 3em;
-                width: 55vw;
-                min-height: 50vh;
-                align-self: center;
-                margin-top: 2em;
-                box-shadow: 20px 10px 20px 2px #81818131;
-                border-radius: 5px;
+            .text-container {
+                display: flex;
+                flex-direction: column;
+                margin-top: 3em;
+                h2 {
+                    text-align: center;
+                    width: 100%;
+                    font-family: customFontFour;
+                    font-weight: bold;
+                }
+                p {
+                    padding-top: 2em;
+                }
+                ul {
+                    margin-top: .7em;
+                    list-style-type: none;
+                }
+                ul>li {
+                    text-indent: 5px;
+                }
+                ul>li:before {
+                    content: "-";
+                    text-indent: 5px;
+                }
+                [class^="box-"] {
+                    margin-top: 4em;
+                }
+                h2 {
+                    color: #202020;
+                    text-transform: uppercase;
+                    word-spacing: 5px;
+                    font-family: customFontTwo;
+                }
+                .box-1 {
+                    margin: 2em;
+                    margin-bottom: 6em;
+                    padding: 3em;
+                    width: 55vw;
+                    min-height: 40vh;
+                    align-self: flex-end;
+                    margin-left: 5em;
+                    box-shadow: -20px 10px 20px 2px #8988882b;
+                    border-radius: 5px;
+                }
+                .box-2 {
+                    margin: 2em;
+                    margin-top: 5em;
+                    margin-bottom: 6em;
+                    padding: 3em;
+                    width: 55vw;
+                    min-height: 40vh;
+                    align-self: flex-start;
+                    margin-right: 5em;
+                    box-shadow: 0px 20px 20px 2px #76757528;
+                    border-radius: 5px;
+                }
+                .box-3 {
+                    margin: 2em;
+                    padding: 3em;
+                    width: 55vw;
+                    min-height: 50vh;
+                    align-self: center;
+                    margin-top: 2em;
+                    box-shadow: 20px 10px 20px 2px #81818131;
+                    border-radius: 5px;
+                }
             }
         }
-    }
-    .contact-section {
-        margin-top: 10em;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        .contact-container {
-            display: inline-flex;
-            flex-direction: column;
-            .form-heading {
-                margin-left: 2em;
-            }
-            .form-container {
-                display: flex;
-                justify-content: center;
-            }
-            .contact-input-container {
-                max-width: 30em;
-                margin: 1em;
-                padding: 1em;
-                li {
-                    display: block;
-                    list-style: none;
-                    margin-top: 1.3em;
+        .contact-section {
+            margin-top: 10em;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            .contact-container {
+                display: inline-flex;
+                flex-direction: column;
+                .form-heading {
+                    margin-left: 2em;
                 }
-                input {
+                .form-container {
+                    display: flex;
+                    justify-content: center;
+                }
+                .contact-input-container {
+                    max-width: 30em;
+                    margin: 1em;
+                    padding: 1em;
+                    li {
+                        display: block;
+                        list-style: none;
+                        margin-top: 1.3em;
+                    }
+                    input {
+                        padding: 7px;
+                        transition: $form-transition-dur-setting;
+                        outline: none;
+                    }
+                    input:focus {
+                        transition-duration: $form-transition-dur-setting;
+                        border-bottom: 1px solid $form-bottom-border-color;
+                        color: transparent;
+                    }
+                    .button {
+                        display: inline-block;
+                        margin-top: 1.5em;
+                        padding: 6px 20px 0px 20px;
+                        border: none;
+                        background-color: #ffffff00;
+                        border-bottom: 2px solid $form-bottom-border-color;
+                        width: 8em;
+                        transition: all 0.4s;
+                        cursor: pointer;
+                    }
+                    .button span {
+                        cursor: pointer;
+                        display: inline-block;
+                        position: relative;
+                        transition: 0.4s;
+                    }
+                    .button span:after {
+                        content: 'now';
+                        opacity: 0;
+                        top: 0;
+                        right: -20px;
+                        transition: 0.4s;
+                        position: absolute;
+                    }
+                    .button:hover span {
+                        padding-right: 2.1em;
+                    }
+                    .button:hover span:after {
+                        opacity: 4;
+                        right: 0;
+                    }
+                }
+                .name-input {
+                    width: 49%;
+                    @include form-border-correction;
+                }
+                .input-email {
+                    @include form-border-correction;
+                    width: 100%;
+                }
+                .input-message {
+                    @include form-border-correction;
+                    height: 10em;
+                    min-height: 8em;
+                    width: 100%;
                     padding: 7px;
                     transition: $form-transition-dur-setting;
                     outline: none;
                 }
-                input:focus {
+                .input-message:focus {
                     transition-duration: $form-transition-dur-setting;
                     border-bottom: 1px solid $form-bottom-border-color;
                     color: transparent;
                 }
-                .button {
-                    display: inline-block;
-                    margin-top: 1.5em;
-                    padding: 6px 20px 0px 20px;
-                    border: none;
-                    background-color: #ffffff00;
-                    border-bottom: 2px solid $form-bottom-border-color;
-                    width: 8em;
-                    transition: all 0.4s;
-                    cursor: pointer;
-                }
-                .button span {
-                    cursor: pointer;
-                    display: inline-block;
-                    position: relative;
-                    transition: 0.4s;
-                }
-                .button span:after {
-                    content: 'now';
-                    opacity: 0;
-                    top: 0;
-                    right: -20px;
-                    transition: 0.4s;
-                    position: absolute;
-                }
-                .button:hover span {
-                    padding-right: 2.1em;
-                }
-                .button:hover span:after {
-                    opacity: 4;
-                    right: 0;
-                }
-            }
-            .name-input {
-                width: 49%;
-                @include form-border-correction;
-            }
-            .input-email {
-                @include form-border-correction;
-                width: 100%;
-            }
-            .input-message {
-                @include form-border-correction;
-                height: 10em;
-                min-height: 8em;
-                width: 100%;
-                padding: 7px;
-                transition: $form-transition-dur-setting;
-                outline: none;
-            }
-            .input-message:focus {
-                transition-duration: $form-transition-dur-setting;
-                border-bottom: 1px solid $form-bottom-border-color;
-                color: transparent;
             }
         }
     }
 }
 
-@media (max-width: 415px) and (max-height: 737px)
+
 /* mobile iPhone 8 plus */
 
-{
+@media (max-width: $width-iphone8-bp) and (max-height: $height-iphone8-bp) {
     #about {
         margin-inline: 1em;
     }
     .about-section {
-        margin-top: 3em;
+        margin-top: 2em;
         .about-heading-container {
+            margin-inline: 1em;
             display: inline-flex;
             text-align: start;
             position: relative;
-            margin-bottom: 5em;
-            /* .typeText::after {
-                    content: "|";
-                    animation: blink 1s infinite;
-                }
-                @keyframes blink {
-                    0%,
-                    100% {
-                        opacity: 1;
-                    }
-                    50% {
-                        opacity: 0;
-                    }
-                } */
+            margin-bottom: 1em;
             #heading {
                 position: relative;
                 text-transform: uppercase;
-                text-shadow: -15px 5px 20px #b7b7b8;
+                text-shadow: -10px 5px 20px #7d7d7d;
                 color: white;
-                font-size: 2rem;
+                font-size: clamp(2rem, 3rem, 5rem);
                 letter-spacing: -0.05em;
                 font-family: customFontThree;
                 user-select: none;
                 transition: all 0.25s ease-out;
                 word-spacing: 5px;
-            }
-            #heading:hover {
-                text-shadow: -16px 6px 15px #ced0d3;
             }
         }
         .text-container {
@@ -275,36 +264,34 @@
                 font-family: customFontTwo;
             }
             .box-1 {
-                margin: 2em;
-                margin-bottom: 6em;
+                margin: 1em;
+                margin-bottom: 4em;
                 padding: 3em;
-                width: 55vw;
+                width: fit-content;
                 min-height: 40vh;
-                align-self: flex-end;
-                margin-left: 5em;
+                align-self: center;
                 box-shadow: -20px 10px 20px 2px #8988882b;
                 border-radius: 5px;
             }
             .box-2 {
-                margin: 2em;
+                margin: 1em;
                 margin-top: 5em;
-                margin-bottom: 6em;
+                margin-bottom: 4em;
                 padding: 3em;
-                width: 55vw;
+                width: fit-content;
                 min-height: 40vh;
-                align-self: flex-start;
-                margin-right: 5em;
+                align-self: center;
                 box-shadow: 0px 20px 20px 2px #76757528;
                 border-radius: 5px;
             }
             .box-3 {
-                margin: 2em;
+                margin: 1em;
                 padding: 3em;
-                width: 55vw;
+                width: fit-content;
                 min-height: 50vh;
                 align-self: center;
                 margin-top: 2em;
-                box-shadow: 20px 10px 20px 2px #81818131;
+                box-shadow: 0px 10px 20px 2px #81818131;
                 border-radius: 5px;
             }
         }
@@ -402,3 +389,8 @@
         }
     }
 }
+
+
+/* general */
+
+@media (max-width: $width-general-bp) and (max-height: $height-general-bp) {}
