--- a/individual-work/wba-projekt-2/styles/_footer.scss
+++ b/individual-work/wba-projekt-2/styles/_footer.scss
@@ -1,54 +1,59 @@
- @media (max-width: 1920px) and (max-height: 1080px) {
-     .footer-main {
-         margin-inline: max(2vw, 20vw);
-         margin-top: 10em;
-         padding: 1em;
-         border-top: 2px solid $footer-color;
-         .footer-text-container {
-             display: flex;
-             flex-direction: column;
-             text-align: center;
-             &:nth-child(1) {
-                 p {
-                     color: $footer-color;
-                     margin-top: .3em;
-                     font-size: clamp(.8vw, 1em);
-                     span {
-                         color: $footer-color;
-                         text-decoration: underline;
-                         font-size: clamp(.8vw, 1em);
-                     }
-                 }
-             }
-         }
-     }
- }
- 
- @media (max-width: 414px) and (max-height: 736px)
- /* mobile iPhone 8 plus */
- 
- {
-     .footer-main {
-         margin-inline: 12vw;
-         margin-top: 5em;
-         padding: .5em;
-         border-top: 2px solid $footer-color;
-         .footer-text-container {
-             display: flex;
-             flex-direction: column;
-             text-align: center;
-             &:nth-child(1) {
-                 p {
-                     color: $footer-color;
-                     margin-top: .1em;
-                     font-size: clamp(.8vw, 1em);
-                     span {
-                         color: $footer-color;
-                         text-decoration: underline;
-                         font-size: clamp(.8vw, 1em);
-                     }
-                 }
-             }
-         }
-     }
- }
+@media only screen and (max-width: $width-desktop-bp) and (max-heigh: $height-desktop-bp) {
+    .footer-main {
+        margin-inline: max(2vw, 20vw);
+        margin-top: 10em;
+        padding: 1em;
+        border-top: 2px solid $footer-color;
+        .footer-text-container {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            &:nth-child(1) {
+                p {
+                    color: $footer-color;
+                    margin-top: .3em;
+                    font-size: clamp(.8vw, 1em);
+                    span {
+                        color: $footer-color;
+                        text-decoration: underline;
+                        font-size: clamp(.8vw, 1em);
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+/* mobile iPhone 8 plus */
+
+@media (max-width: $width-iphone8-bp) and (max-height: $height-iphone8-bp) {
+    .footer-main {
+        margin-inline: 12vw;
+        margin-top: 5em;
+        padding: .1em;
+        border-top: 2px solid $footer-color;
+        .footer-text-container {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            &:nth-child(1) {
+                p {
+                    color: $footer-color;
+                    font-size: clamp(.8vw, 1em);
+                    margin-top: .1em;
+                    span {
+                        color: $footer-color;
+                        text-decoration: underline;
+                        font-size: clamp(.8vw, 1em);
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+/* general */
+
+@media (max-width: $width-general-bp) and (max-height: $height-general-bp) {}
