--- a/individual-work/wba-projekt-2/styles/_header.scss
+++ b/individual-work/wba-projekt-2/styles/_header.scss
@@ -1,55 +1,60 @@
-header {
-    height: 8vh;
-    margin-bottom: 4em;
-    position: sticky;
-    top: 0;
-    background-color: white;
-    z-index: 999;
-    nav {
-        margin-inline: 8em;
-        .navbar-main {
-            display: flex;
-            justify-content: space-between;
-            align-content: center;
-            .logo {
-                img {
-                    height: 50px;
-                    margin: 10px;
-                }
-                #respon-img-mini {
-                    display: none;
-                }
-            }
-            .button {
-                margin: 10px;
-                margin-right: 15px;
-                .button-container li {
-                    position: relative;
-                    float: left;
-                    list-style: none;
-                    width: fit-content;
-                    text-align: center;
-                    background-color: transparent;
-                    font-size: 120%;
-                    margin-left: .7em;
-                }
-                .button-container a {
-                    text-decoration: none;
-                    color: black;
-                    .button-container a:after {
-                        background: none repeat scroll 0 0 transparent;
-                        bottom: 0;
-                        content: "";
-                        height: 2px;
-                        left: 50%;
-                        position: absolute;
-                        background: black;
-                        transition: width 0.3s ease 0s, left 0.3s ease 0s;
-                        width: 0;
+@media only screen and (max-width: $width-desktop-bp) and (max-heigh: $height-desktop-bp) {
+    header {
+        background-color: red;
+        height: 8vh;
+        margin-bottom: 4em;
+        position: sticky;
+        top: 0;
+        background-color: white;
+        z-index: 999;
+        nav {
+            margin-inline: 8em;
+            .navbar-main {
+                display: flex;
+                justify-content: space-between;
+                align-content: center;
+                .logo {
+                    img {
+                        height: 50px;
+                        margin: 10px;
                     }
-                    .button-container a:hover:after {
-                        width: 100%;
-                        left: 0;
+                    #respon-img-mini {
+                        display: none;
+                    }
+                }
+                .button {
+                    margin: 10px;
+                    margin-right: 15px;
+                    display: flex;
+                    align-items: center;
+                    .button-container li {
+                        position: relative;
+                        float: left;
+                        list-style: none;
+                        width: fit-content;
+                        text-align: center;
+                        background-color: transparent;
+                        font-size: 120%;
+                        margin-left: .7em;
+                    }
+                    .button-container a {
+                        text-decoration: none;
+                        color: black;
+                        .button-container a:after {
+                            background: none repeat scroll 0 0 transparent;
+                            bottom: 0;
+                            content: "";
+                            height: 2px;
+                            left: 50%;
+                            position: absolute;
+                            background: black;
+                            transition: width 0.3s ease 0s, left 0.3s ease 0s;
+                            width: 0;
+                        }
+                        .button-container a:hover:after {
+                            width: 100%;
+                            left: 0;
+                        }
                     }
                 }
             }
@@ -57,10 +62,10 @@ header {
     }
 }
 
-@media (max-width: 414px) and (max-height: 736px)
+
 /* mobile iPhone 8 plus */
 
-{
+@media (max-width: $width-iphone8-bp) and (max-height: $height-iphone8-bp) {
     header {
         margin-bottom: 1em;
         height: 8vh;
@@ -89,6 +94,8 @@ header {
                 .button {
                     margin: 10px;
                     margin-right: 15px;
+                    display: flex;
+                    align-items: center;
                     .button-container li {
                         position: relative;
                         float: left;
@@ -125,20 +132,6 @@ header {
 }
 
 
-/* @media (min-width: 1366) and (min-height: 768px) {}
+/* general */
 
-                    
-                    @media (min-width: 1440) and (min-height: 900px) {}
-                    
-                    @media (min-width: 1280) and (min-height: 720px) {}
-                    
-                    @media (min-width: 360) and (min-height: 640px) {}
-                    
-                    @media (min-width: 375px) and (min-height: 812px) {}
-                    
-                    @media (min-width: 768px) and (min-height: 1024px) {}
-                    
-                    @media (min-width: 601px) and (min-height: 962px) {}
-                    
-                                /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
- */
+@media (max-width: $width-general-bp) and (max-height: $height-general-bp) {}
