--- a/individual-work/wba-projekt-2/styles/_header.scss
+++ b/individual-work/wba-projekt-2/styles/_header.scss
@@ -1,4 +1,4 @@
-@media only screen and (max-width: $width-desktop-bp) and (max-heigh: $height-desktop-bp) {
+@media only screen and (min-width: $width-desktop-bp) and (min-heigh: $height-desktop-bp) {
     header {
         background-color: red;
         height: 8vh;
@@ -65,7 +65,7 @@
 
 /* mobile iPhone 8 plus */
 
-@media (max-width: $width-iphone8-bp) and (max-height: $height-iphone8-bp) {
+@media only screen and(min-width: $width-iphone8-bp) and (min-height: $height-iphone8-bp) {
     header {
         margin-bottom: 1em;
         height: 8vh;
