--- a/individual-work/wba-projekt-2/styles/_var.scss
+++ b/individual-work/wba-projekt-2/styles/_var.scss
@@ -23,39 +23,36 @@ $footer-color: #857f7fa6;
 $form-bottom-border-color: black;
 $form-transition-dur-setting: all 0.30s ease-in-out;
 
+/*  */
+
+
 /* breakpoints desktop */
 
-$width-desktop-bp: 2560px;
-$height-desktop-bp: 1440px;
+$width-desktop-bp: 1920px;
+$height-desktop-bp: 1080px;
 
-/* breakpoints iphone8 */
+/* breakpoints hd */
 
-$width-iphone8-bp: 414px;
-$height-iphone8-bp: 737px;
+$width-hd-bp: 1280px;
+$height-hd-bp: 720px;
 
 /* breakpoints  general*/
 
 $width-general-bp: 360px;
 $height-general-bp: 640px;
 
+/* breakpoints iphone8 */
+
+$width-iphone8-bp: 414px;
+$height-iphone8-bp: 737px;
+
 /* breakpoints ipad */
 
 $width-tablet-bp: 768px;
 $height-tablet-bp: 962px;
 
-/* @media (min-width: 1366) and (min-height: 768px) {}
-
-                    
-                    @media (min-width: 1440) and (min-height: 900px) {}
-                    
-                    @media (min-width: 1280) and (min-height: 720px) {}
-                    
-                    @media (min-width: 360) and (min-height: 640px) {}
-                    
-                    @media (min-width: 375px) and (min-height: 812px) {}
-                    
-                    @media (min-width: 768px) and (min-height: 1024px) {}
-                    
-                    @media (min-width: 601px) and (min-height: 962px) {}                   
-                                
- */
+/* 
+@media (min-width: 1366) and (min-height: 768px) {}
+@media (min-width: 1440) and (min-height: 900px) {}  
+@media (min-width: 601px) and (min-height: 962px) {} 
+*/
