--- a/individual-work/wba-projekt-2/styles/_about.scss
+++ b/individual-work/wba-projekt-2/styles/_about.scss
@@ -1,6 +1,4 @@
-/* desktop */
-
-@media only screen and (max-width: $width-desktop-bp) and (min-heigh: $height-desktop-bp) {
+@media only screen and (min-width: $width-desktop-bp) {
     #about {
         margin-inline: 8em;
         .about-section {
@@ -28,16 +26,13 @@
                     text-transform: uppercase;
                     text-shadow: -15px 5px 20px #b7b7b8;
                     color: white;
-                    font-size: clamp(2rem, 3rem, 5rem);
+                    font-size: clamp(2rem, 4.5rem, 5rem);
                     letter-spacing: -0.05em;
                     font-family: customFontThree;
                     user-select: none;
                     transition: all 0.25s ease-out;
                     word-spacing: 5px;
                 }
-                /* #heading:hover {
-                    text-shadow: -16px 6px 15px #ced0d3;
-                } */
             }
             .text-container {
                 display: flex;
@@ -65,12 +60,6 @@
                 }
                 [class^="box-"] {
                     margin-top: 4em;
-                }
-                h2 {
-                    color: #202020;
-                    text-transform: uppercase;
-                    word-spacing: 5px;
-                    font-family: customFontTwo;
                 }
                 .box-1 {
                     margin: 2em;
@@ -168,7 +157,7 @@
                         position: absolute;
                     }
                     .button:hover span {
-                        padding-right: 2.1em;
+                        padding-right: 2.04em;
                     }
                     .button:hover span:after {
                         opacity: 4;
@@ -202,10 +191,7 @@
     }
 }
 
-
-/* mobile iPhone 8 plus */
-
-@media (max-width: $width-iphone8-bp) and (max-height: $height-iphone8-bp) {
+@media only screen and (max-width: $width-iphone8-bp) {
     #about {
         margin-inline: 1em;
     }
@@ -257,16 +243,10 @@
             [class^="box-"] {
                 margin-top: 4em;
             }
-            h2 {
-                color: #202020;
-                text-transform: uppercase;
-                word-spacing: 5px;
-                font-family: customFontTwo;
-            }
             .box-1 {
                 margin: 1em;
                 margin-bottom: 4em;
-                padding: 3em;
+                padding: 2em;
                 width: fit-content;
                 min-height: 40vh;
                 align-self: center;
@@ -277,7 +257,7 @@
                 margin: 1em;
                 margin-top: 5em;
                 margin-bottom: 4em;
-                padding: 3em;
+                padding: 2em;
                 width: fit-content;
                 min-height: 40vh;
                 align-self: center;
@@ -286,7 +266,7 @@
             }
             .box-3 {
                 margin: 1em;
-                padding: 3em;
+                padding: 2em;
                 width: fit-content;
                 min-height: 50vh;
                 align-self: center;
@@ -390,7 +370,53 @@
     }
 }
 
-
-/* general */
-
-@media (max-width: $width-general-bp) and (max-height: $height-general-bp) {}
+@media (max-width: $width-general-bp) {
+    #about {
+        margin-inline: 1em;
+    }
+    .about-section {
+        margin-top: 3em;
+        .about-heading-container {
+            margin-inline: 1em;
+            display: inline-flex;
+            text-align: start;
+            position: relative;
+            margin-bottom: 1em;
+            #heading {
+                position: relative;
+                text-transform: uppercase;
+                text-shadow: -10px 5px 20px #7d7d7d;
+                color: white;
+                font-size: clamp(2rem, 3rem, 5rem);
+                letter-spacing: -0.05em;
+                font-family: customFontThree;
+                user-select: none;
+                transition: all 0.25s ease-out;
+                word-spacing: 5px;
+            }
+        }
+        .text-container {
+            display: flex;
+            flex-direction: column;
+            margin-top: 3em;
+            h2 {
+                text-align: center;
+                width: 100%;
+                font-family: customFontFour;
+                font-weight: bold;
+            }
+            p {
+                padding-top: 2em;
+            }
+        }
+    }
+    .contact-section {
+        margin-top: 3em;
+        .contact-container {
+            .contact-input-container {
+                margin: 1em;
+                margin-top: 0;
+            }
+        }
+    }
+}
