--- a/individual-work/wba-projekt-2/styles/_footer.scss
+++ b/individual-work/wba-projekt-2/styles/_footer.scss
@@ -1,4 +1,4 @@
-@media only screen and (max-width: $width-desktop-bp) and (max-heigh: $height-desktop-bp) {
+@media only screen and (min-width: $width-desktop-bp) {
     .footer-main {
         margin-inline: max(2vw, 20vw);
         margin-top: 10em;
@@ -24,10 +24,7 @@
     }
 }
 
-
-/* mobile iPhone 8 plus */
-
-@media (max-width: $width-iphone8-bp) and (max-height: $height-iphone8-bp) {
+@media only screen and (max-width: $width-iphone8-bp) {
     .footer-main {
         margin-inline: 12vw;
         margin-top: 5em;
@@ -53,7 +50,28 @@
     }
 }
 
-
-/* general */
-
-@media (max-width: $width-general-bp) and (max-height: $height-general-bp) {}
+@media only screen and(max-width: $width-general-bp) {
+    .footer-main {
+        margin-inline: 12vw;
+        margin-top: 3em;
+        padding: .1em;
+        border-top: 2px solid $footer-color;
+        .footer-text-container {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            &:nth-child(1) {
+                p {
+                    color: $footer-color;
+                    font-size: clamp(.8vw, 1em);
+                    margin-top: .1em;
+                    span {
+                        color: $footer-color;
+                        text-decoration: underline;
+                        font-size: clamp(.8vw, 1em);
+                    }
+                }
+            }
+        }
+    }
+}
