--- a/individual-work/wba-projekt-2/styles/_header.scss
+++ b/individual-work/wba-projekt-2/styles/_header.scss
@@ -1,7 +1,6 @@
-@media only screen and (min-width: $width-desktop-bp) and (min-heigh: $height-desktop-bp) {
+@media only screen and (min-width: $width-desktop-bp) {
     header {
-        background-color: red;
-        height: 8vh;
+        height: 4.5em;
         margin-bottom: 4em;
         position: sticky;
         top: 0;
@@ -24,7 +23,6 @@
                 }
                 .button {
                     margin: 10px;
-                    margin-right: 15px;
                     display: flex;
                     align-items: center;
                     .button-container li {
@@ -34,7 +32,7 @@
                         width: fit-content;
                         text-align: center;
                         background-color: transparent;
-                        font-size: 120%;
+                        font-size: clamp(90%, 120%, 125%);
                         margin-left: .7em;
                     }
                     .button-container a {
@@ -62,10 +60,7 @@
     }
 }
 
-
-/* mobile iPhone 8 plus */
-
-@media only screen and(min-width: $width-iphone8-bp) and (min-height: $height-iphone8-bp) {
+@media only screen and (max-width: $width-iphone8-bp) {
     header {
         margin-bottom: 1em;
         height: 8vh;
@@ -93,7 +88,6 @@
                 }
                 .button {
                     margin: 10px;
-                    margin-right: 15px;
                     display: flex;
                     align-items: center;
                     .button-container li {
@@ -131,7 +125,59 @@
     }
 }
 
-
-/* general */
-
-@media (max-width: $width-general-bp) and (max-height: $height-general-bp) {}
+@media (max-width: $width-general-bp) {
+    header {
+        height: 5em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        nav {
+            margin-inline: .6em;
+            .navbar-main {
+                .logo {
+                    img {
+                        height: 40px;
+                        margin: 10px;
+                    }
+                    #respon-img-big {
+                        display: none;
+                    }
+                    #respon-img-mini {
+                        display: flex;
+                    }
+                }
+                .button {
+                    .button-container li {
+                        position: relative;
+                        float: left;
+                        list-style: none;
+                        width: fit-content;
+                        text-align: center;
+                        background-color: transparent;
+                        font-size: 100%;
+                        margin-left: .7em;
+                    }
+                    .button-container a {
+                        text-decoration: none;
+                        color: black;
+                        .button-container a:after {
+                            background: none repeat scroll 0 0 transparent;
+                            bottom: 0;
+                            content: "";
+                            height: 2px;
+                            left: 50%;
+                            position: absolute;
+                            background: black;
+                            transition: width 0.3s ease 0s, left 0.3s ease 0s;
+                            width: 0;
+                        }
+                        .button-container a:hover:after {
+                            width: 100%;
+                            left: 0;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
