--- a/individual-work/wba-projekt-2/styles/_footer.scss
+++ b/individual-work/wba-projekt-2/styles/_footer.scss
@@ -101,3 +101,29 @@
         }
     }
 }
+
+@media only screen and (max-width: $width-legacy-bp) {
+    .footer-main {
+        margin-inline: max(2vw, 20vw);
+        margin-top: 6em;
+        padding: 1em;
+        border-top: 2px solid $footer-color;
+        .footer-text-container {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            &:nth-child(1) {
+                p {
+                    color: $footer-color;
+                    margin-top: .3em;
+                    font-size: clamp(.8vw, 1em);
+                    span {
+                        color: $footer-color;
+                        text-decoration: underline;
+                        font-size: clamp(.8vw, 1em);
+                    }
+                }
+            }
+        }
+    }
+}
