--- a/individual-work/wba-projekt-2/styles/_header.scss
+++ b/individual-work/wba-projekt-2/styles/_header.scss
@@ -133,7 +133,7 @@
         height: 8vh;
         position: sticky;
         top: 0;
-        background-color: white;
+        background-color: rgb(186, 0, 0);
         z-index: 999;
         display: flex;
         align-items: center;
